fix: 数值运算 issue

--- a/algorithm/数学运算/二进制中1的个数.md
+++ b/algorithm/数学运算/二进制中1的个数.md
@@ -1,16 +1,16 @@
-输入一个整数，输出该数二进制表示中1的个数。`其中负数用补码表示`。
+输入一个整数, 输出该数二进制表示中1的个数. `其中负数用补码表示`. 
 
 ```js
 function countOneBits(num) {
   let count = 0;
-  // 对于负数，先转换为补码表示
+  // 对于负数, 先转换为补码表示
   if (num < 0) {
     num = (num >>> 0).toString(2);
   } else {
     num = num.toString(2);
   }
   
-  // 遍历二进制表示，统计1的个数
+  // 遍历二进制表示, 统计1的个数
   for (let i = 0; i < num.length; i++) {
     if (num[i] === '1') {
       count++;
@@ -26,36 +26,41 @@ function countOneBits(num) {
 
 这是一道考察二进制的题目
 
-- 二进制或运算符（or）：符号为`|`，表示若两个二进制位都为0，则结果为0，否则为1。
+- 二进制或运算符(or)：符号为`|`, 表示若两个二进制位都为0, 则结果为0, 否则为1. 
 
-- 二进制与运算符（and）：符号为`&`，表示若两个二进制位都为1，则结果为1，否则为0。
+- 二进制与运算符(and)：符号为`&`, 表示若两个二进制位都为1, 则结果为1, 否则为0. 
 
-- 二进制否运算符（not）：符号为`~`，表示对一个二进制位取反。
+- 二进制否运算符(not)：符号为`~`, 表示对一个二进制位取反. 
 
-- 异或运算符（xor）：符号为`^`，表示若两个二进制位不相同，则结果为1，否则为0
+- 异或运算符(xor)：符号为`^`, 表示若两个二进制位不相同, 则结果为1, 否则为0
 
-- 左移运算符`m << n`表示把m左移n位，左移n位的时候，最左边的n位将被丢弃，同时在最右边补上n个0，比如：
+- 左移运算符`m << n`表示把m左移n位, 左移n位的时候, 最左边的n位将被丢弃, 同时在最右边补上n个0, 比如：
 
 `00001010<<2 = 00101000`
 
-- 右移运算符m >> n表示把m右移n位，右移n位的时候，最右边的n位将被丢弃，同时在最左边补上n个0，比如：
+- 右移运算符
+```
+无符号右移>>>
+>>>右移动指定的位数. 向右被移出的位被丢弃, 左侧用0填充. 因为符号位变成了0, 所以结果总是非负的. 
 
-`00001010>>2 = 00000010`
+有符号右移>> [负数以补码的形式右移]
+>>向右移动指定的位数. 向右被移出的位被丢弃, 拷贝最左侧的位以填充左侧. 由于新的最左侧的位总是和以前相同, 符号位没有被改变. 所以被称作“符号传播”. 
+```
 
 ```
 //  拿四位二进制举例
 1110 -6  //原码 [符号位是1]
-1010 （1001 + 1）//补码
+1010 (1001 + 1)//补码
 ```
 
 > 补码 <br>
-对于一个给定的整数，其补码表示方式如下：<br>
-对于正数，补码与原码相同。<br>
-*对于负数，先求其绝对值的二进制表示，然后按位取反（0 变为 1，1 变为 0），再将结果加 1。*
+对于一个给定的整数, 其补码表示方式如下：<br>
+对于正数, 补码与原码相同. <br>
+*对于负数, 先求其绝对值的二进制表示, 然后按位取反(0 变为 1, 1 变为 0), 再将结果加 1. *
 
 > 反码 <br>
 正数的反码为本身<br>
-*负数的反码为除符号位不变，其余位取反*
+*负数的反码为除符号位不变, 其余位取反*
 
 -5的原码为：1 0000101
 
@@ -63,17 +68,8 @@ function countOneBits(num) {
 
 -5的补码为：1 1111011
 
-```
-无符号右移>>>
->>>右移动指定的位数。向右被移出的位被丢弃，左侧用0填充。因为符号位变成了0，所以结果总是非负的。
 
-有符号右移>> [负数以补码的形式右移]
->>向右移动指定的位数。向右被移出的位被丢弃，拷贝最左侧的位以填充左侧。由于新的最左侧的位总是和以前相同，符号位没有被改变。所以被称作“符号传播”。
-```
-
-`js中会将数值转成对应的二进制*补码*，再执行位运算`，运算结束后，将结果转换成原码表示数值。
-
-零填充右移运算>>>，符号位也参与运算，零填充右移的结果恒为非负值。
+`js中会将数值转成对应的二进制*补码*, 再执行位运算`, 运算结束后, 将结果转换成原码表示数值. 
 
 
 ### JS中如何转换为其他进制
@@ -96,11 +92,11 @@ const hex = number.toString(16);
 ```js
 
 radix
-一个整数，范围在 2 到 36 之间，用于指定表示数字值的基数。`默认为 10。`
+一个整数, 范围在 2 到 36 之间, 用于指定表示数字值的基数. `默认为 10. `
 
-`Number 对象的重写了 Object 的 toString 方法`；它不会继承 Object.prototype.toString()。对于 Number 值，toString 方法返回数字值指定基数的字符串表示。
+`Number 对象的重写了 Object 的 toString 方法`; 它不会继承 Object.prototype.toString(). 对于 Number 值, toString 方法返回数字值指定基数的字符串表示. 
 
-对于 10 以上的基数，字母表示大于 9 的数字。例如，对于十六进制数（基数为 16），`a 到 f `用于表示大于 9 的数字。
+对于 10 以上的基数, 字母表示大于 9 的数字. 例如, 对于十六进制数(基数为 16), `a 到 f `用于表示大于 9 的数字. 
 
 const x = 6;
 console.log(x.toString(2)); // "110"
@@ -114,18 +110,18 @@ console.log((-0xff).toString(2)); // "-11111111"
 
 
 `string`<br>
-要被解析的值。如果参数不是一个字符串，则将其转换为字符串 (使用 ToString抽象操作)。字符串开头的空白符将会被忽略。
+要被解析的值. 如果参数不是一个字符串, 则将其转换为字符串 (使用 ToString抽象操作). 字符串开头的空白符将会被忽略. 
 
 `radix_ 可选_`<br>
-从 2 到 36 的整数，表示进制的基数。例如指定 16 表示被解析值是十六进制数。如果超出这个范围，将返回 NaN。假如指定 0 或未指定，基数将会根据字符串的值进行推算。
+从 2 到 36 的整数, 表示进制的基数. 例如指定 16 表示被解析值是十六进制数. 如果超出这个范围, 将返回 NaN. 假如指定 0 或未指定, 基数将会根据字符串的值进行推算. 
 
 ```js
-//  将字符串看成 radix 进制，转成10进制的数字
+//  将字符串看成 radix 进制, 转成10进制的数字
 parseInt("10");			  // 输出结果：10
 parseInt("17",8);		  // 输出结果：15 (8+7)
 parseInt("010");		  // 输出结果：10
 
-parseInt("0x10")      // 输出结果：16, 0x前缀，推算为十六进制
+parseInt("0x10")      // 输出结果：16, 0x前缀, 推算为十六进制
 
 parseInt("50", 1)      // 输出结果：NaN
 parseInt("50", 40)     // 输出结果：NaN
@@ -138,16 +134,16 @@ parseInt('1.9') // 1 (decimal part is truncated)
 parseInt(string, radix);
 
 返回 NaN
-- radix 小于 2 或大于 36，或
-- 第一个非空格字符不能转换为数字。
+- radix 小于 2 或大于 36, 或
+- 第一个非空格字符不能转换为数字. 
 
-如果 radix 是 undefined、0 或未指定的，JavaScript 会假定以下情况：
+如果 radix 是 undefined、0 或未指定的, JavaScript 会假定以下情况：
 
-1. 如果输入的 string 以 0x 或 0X（一个 0，后面是小写或大写的 X）开头，那么 radix 被假定为 16，字符串的其余部分被当做十六进制数去解析。
+1. 如果输入的 string 以 0x 或 0X(一个 0, 后面是小写或大写的 X)开头, 那么 radix 被假定为 16, 字符串的其余部分被当做十六进制数去解析. 
 
-2. 如果输入的 string 以 "0"（0）开头，radix 被假定为 8（八进制）或 10（十进制）。具体选择哪一个 radix 取决于实现。ECMAScript 5 澄清了应该使用 10 (十进制)，但不是所有的浏览器都支持。因此，在使用 parseInt 时，一定要指定一个 radix。
+2. 如果输入的 string 以 "0"(0)开头, radix 被假定为 8(八进制)或 10(十进制). 具体选择哪一个 radix 取决于实现. ECMAScript 5 澄清了应该使用 10 (十进制), 但不是所有的浏览器都支持. 因此, 在使用 parseInt 时, 一定要指定一个 radix. 
 
-3. 如果输入的 string 以任何其他值开头，radix 是 10 (十进制)。
+3. 如果输入的 string 以任何其他值开头, radix 是 10 (十进制). 
 ```
 
 
@@ -167,9 +163,9 @@ Math.exp(1); // 2.718281828459045
 //  Math.log() 函数返回一个数的自然对数
 Math.log(1); // 0
 
-//  Math.log10() 函数返回一个数字以 10 为底的对数。
-//  Math.log2() 函数返回一个数字以 2 为底的对数。
-//  Math.pow(base, exponent) 函数返回基数（base）的指数（exponent）次幂，即 base^exponent。
+//  Math.log10() 函数返回一个数字以 10 为底的对数. 
+//  Math.log2() 函数返回一个数字以 2 为底的对数. 
+//  Math.pow(base, exponent) 函数返回基数(base)的指数(exponent)次幂, 即 base^exponent. 
 //  Math.sqrt() 函数返回一个数的平方根
 ```
 
@@ -187,20 +183,20 @@ Math.log(1); // 0
 
 0.1 + 0.2 === 0.3 //  false
 
-计算机无法直接对十进制的数字进行运算，这是硬件物理特性已经决定的。这样运算就分成了两个部分：先按照IEEE 754转成相应的二进制，然后对阶运算
+计算机无法直接对十进制的数字进行运算, 这是硬件物理特性已经决定的. 这样运算就分成了两个部分：先按照IEEE 754转成相应的二进制, 然后对阶运算
 
-二进制模拟十进制进行计算时 的精度问题
+问题所在: 二进制模拟十进制进行计算时 的精度问题
 
 精度损失可能出现在进制转化和对阶运算过程中
 
 怎么解决精度问题？ 
 - Math.js / big.js
 
-2的-1074方（Number.MIN_VALUE）和 2的1024方-1（Number.MAX_VALUE）之间的正浮点数
+2的-1074方(Number.MIN_VALUE)和 2的1024方-1(Number.MAX_VALUE)之间的正浮点数
 
-只有在 -2^53 + 1 到 2^53 - 1 范围内（闭区间）的整数才能在不丢失精度的情况下被表示（可通过 Number.MIN_SAFE_INTEGER 和 Number.MAX_SAFE_INTEGER 获得），因为尾数只能容纳 53 位（包括前导 1）。
+只有在 -2^53 + 1 到 2^53 - 1 范围内(闭区间)的整数才能在不丢失精度的情况下被表示(可通过 Number.MIN_SAFE_INTEGER 和 Number.MAX_SAFE_INTEGER 获得), 因为尾数只能容纳 53 位(包括前导 1). 
 
-“安全”指的是能够精确表示整数并正确比较它们。例如，Number.MAX_SAFE_INTEGER + 1 === Number.MAX_SAFE_INTEGER + 2 的结果将为真，这在数学上是不正确的。
+“安全”指的是能够精确表示整数并正确比较它们. 例如, Number.MAX_SAFE_INTEGER + 1 === Number.MAX_SAFE_INTEGER + 2 的结果将为真, 这在数学上是不正确的. 
 
 Number.MAX_VALUE * 2  //  Infinity
 
