--- a/algorithm/数学运算/字符串转换成整数.md
+++ b/algorithm/数学运算/字符串转换成整数.md
@@ -1,4 +1,4 @@
-将一个字符串转换成一个整数(实现Integer.valueOf(string)的功能，但是string不符合数字要求时返回0)，要求不能使用字符串转换整数的库函数。 数值为0或者字符串不是一个合法的数值则返回0。
+将一个字符串转换成一个整数(实现Integer.valueOf(string)的功能, 但是string不符合数字要求时返回0), 要求不能使用字符串转换整数的库函数.  数值为0或者字符串不是一个合法的数值则返回0. 
 
 ```js
 
@@ -28,7 +28,7 @@ function strToInt(str) {
     if (code >= 0 && code <= 9) {
       num = num * 10 + code;
     } else {
-      // 非数字字符，返回0
+      // 非数字字符, 返回0
       return 0;
     }
   }
@@ -42,6 +42,8 @@ function strToInt(str) {
 }
 
 tip: charCodeAt() 方法可以用来获取字符串中指定位置的字符的 Unicode 编码
-字符 '0' 的 Unicode 编码为 48，字符 '1' 的 Unicode 编码为 49，以此类推，直到字符 '9' 的 Unicode 编码为 57。
+字符 '0' 的 Unicode 编码为 48, 字符 '1' 的 Unicode 编码为 49, 以此类推, 直到字符 '9' 的 Unicode 编码为 57. 
+
+charAt(index) 方法 表示字符串 index 位置字符
 ```
 
