--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -31,6 +31,19 @@
 - [1+2+3+...+n⭐⭐⭐](./数学运算/1+2+3+...+n.md)
 - [丑数⭐⭐⭐](./数学运算/丑数.md)
 
+- 特殊规律
+```
+1. 无符号右移>>>
+2. 有符号右移>> [负数以补码的形式右移]
+3. 正数的补码=源码; 负数的反码和补码均是 符号位最后加上，补码是反码再加一
+4. js中会将数值转成对应的二进制*补码*, 再执行位运算
+5. 二进制模拟十进制进行计算时 的精度问题
+6. 两个相同的数 异或值xor 为0
+7. 一个数和自己的负数 取与, 确定某一位 为 1
+8. num % 10 === 1 搭配 num = Math.floor(num / 10) 获取num中1的个数
+9. 位运算代替除法 -> 将 结果 除以 2 等价于 >> 1
+```
+
 ### 查找
 
 查找-概览
