--- a/algorithm/数学运算/不用加减乘除做加法.md
+++ b/algorithm/数学运算/不用加减乘除做加法.md
@@ -4,31 +4,31 @@
 
 5的二进制为101，17的二进制为10001 <br>
 1.不进位相加 -> 101+10001=10100<br>
-2.计算进位 -> 10<br>
-3.进位与不进位结果进行相加 10100【12】 + 10 = 10110，转换成十进制后即22
+2.计算进位 -> 产生进位 10<br>
+3.进位与不进位结果进行相加 10100 + 10 = 10110，转换成十进制后即22
 
 使用位运算来计算二进制：
 
-二进制异或操作 和 不进位相加 得到的结果相同(1^1=0 0^1=1 0^0=0)
-二进制与操作后左移 和 进位结果相同（1&1=1 1&0=0 0&0=0）
+二进制 异或操作 和 不进位相加 得到的结果相同(1^1=0 0^1=1 0^0=0)
+二进制 与操作 后 左移 和 进位结果相同 (1&1=1 1&0=0 0&0=0)
 
 ```js
-    function Add(num1, num2) {
-      if (num2 === 0) {
-        return num1;
-      }
-      return Add(num1 ^ num2, (num1 & num2) << 1);
-    }
+function Add(num1, num2) {
+  if (num2 === 0) {
+    return num1;
+  }
+  return Add(num1 ^ num2, (num1 & num2) << 1);
+}
 
-    function Add(num1, num2) {
-      //  进位为0 的时候，到终止条件
-      while (num2 != 0) {
-        const excl = num1 ^ num2; // 非进位和
-        const carry = (num1 & num2) << 1; // 进位
-        num1 = excl;
-        num2 = carry; // 更新b为进位
-      }
-      return num1;
-    }
+function Add(num1, num2) {
+  //  进位为0 的时候，到终止条件
+  while (num2 != 0) {
+    const excl = num1 ^ num2; // 非进位和
+    const carry = (num1 & num2) << 1; // 进位
+    num1 = excl;
+    num2 = carry; // 更新b为进位
+  }
+  return num1;
+}
 
 ```
