--- a/algorithm/数学运算/数组中只出现一次的数字.md
+++ b/algorithm/数学运算/数组中只出现一次的数字.md
@@ -15,7 +15,7 @@ function findOnceNum(arr) {
   const result = []
   for (let [key, value] of map.entries()) {
     if (value === 1) {
-      result.push(keu)
+      result.push(key)
     }
   }
 
