--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -47,11 +47,16 @@
 ### 查找
 
 查找-概览
-二维数组查找⭐⭐
-在排序数组中查找数字⭐⭐
-整数中1出现的次数⭐⭐
+> 二分查找维护查找空间的左、右和中间指示符，并比较查找目标或将查找条件应用于集合的中间值[适用排序数组]
 
-相关题目
+- [二维数组查找⭐⭐](./查找/二维数组查找.md)
+- [旋转数组的最小数字](./查找/旋转数组的最小数字.md)
+- [在排序数组中查找数字⭐⭐](./查找/在排序数组中查找数字.md)
+- [整数中1出现的次数⭐⭐](./查找/.md)
+- [x 的平方根](./查找/.md)
+- [猜数字大小](./查找/.md)
+
+- 相关题目
 - 腾讯：简述二分查找算法与时间复杂度，并实现一个二分查找算法
 - 腾讯&字节&leetcode34：在排序数组中查找元素的第一个和最后一个位置
 - 腾讯&leetcode230：二叉搜索树中第K小的元素
@@ -80,6 +85,7 @@ DFS和BFS-概览
 N皇后问题⭐⭐⭐
 N皇后问题2⭐⭐⭐
 
+- 相关题目
 百度&leetcode46：全排列问题
 腾讯&leetcode22：括号生成
 
@@ -90,7 +96,7 @@ N皇后问题2⭐⭐⭐
 最小路径和⭐⭐⭐
 打家劫舍⭐⭐⭐
 
-相关题目
+- 相关题目
 字节&leetcode70：爬楼梯问题
 字节&leetcode746：使用最小花费爬楼梯
 字节二面&leetcode53：最大子序和
@@ -104,6 +110,7 @@ N皇后问题2⭐⭐⭐
 贪心算法-概览
 分发饼干⭐⭐
 
+- 相关题目
 字节&leetcode122：买卖股票的最佳时机 II
 字节&leetcode455：分发饼干
 腾讯&leetcode659：分割数组为连续子序列
