feat: 查找 finish

--- a/algorithm/查找/在排序数组中查找数字.md
+++ b/algorithm/查找/在排序数组中查找数字.md
@@ -35,6 +35,7 @@ function countOccurrences(arr, target) {
 function findFirstOccurrence(arr, target) {
   let left = 0;
   let right = arr.length - 1;
+  //  注意这个玩意儿的定义
   let firstOccurrence = -1;
 
   while (left <= right) {
@@ -50,7 +51,7 @@ function findFirstOccurrence(arr, target) {
       right = mid - 1;
     }
   }
-
+  //  返回该东东
   return firstOccurrence;
 }
 
