--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -52,19 +52,18 @@
 - [二维数组查找⭐⭐](./查找/二维数组查找.md)
 - [旋转数组的最小数字](./查找/旋转数组的最小数字.md)
 - [在排序数组中查找数字⭐⭐](./查找/在排序数组中查找数字.md)
-- [整数中1出现的次数⭐⭐](./查找/.md)
-- [x 的平方根](./查找/.md)
-- [猜数字大小](./查找/.md)
+- [x 的平方根](https://leetcode.cn/problems/sqrtx/description/?utm_source=LCUS&utm_medium=ip_redirect_q_uns&utm_campaign=transfer2china)
+- [猜数字大小](https://leetcode.cn/problems/guess-number-higher-or-lower/description/)
 
 - 相关题目
-- 腾讯：简述二分查找算法与时间复杂度，并实现一个二分查找算法
-- 腾讯&字节&leetcode34：在排序数组中查找元素的第一个和最后一个位置
-- 腾讯&leetcode230：二叉搜索树中第K小的元素
-- 腾讯&leetcode875：爱吃香蕉的珂珂
+- [腾讯：简述二分查找算法与时间复杂度，并实现一个二分查找算法](./查找/二分查找.md)
+- [腾讯&字节&leetcode34：在排序数组中查找元素的第一个和最后一个位置](./查找/在排序数组中查找数字.md)
+- [腾讯&leetcode230：二叉搜索树中第K小的元素](../dataStructure/二叉树/leetcode+tx-二叉搜索树的第k个节点.md)
+- [腾讯&leetcode875：爱吃香蕉的珂珂](https://leetcode.cn/problems/koko-eating-bananas/description/)
 
 ### DFS BFS
 
-DFS和BFS-概览
+- [DFS和BFS-概览](./DFS+BFS/DFS+BFS.md)
 
 ### 递归和循环
 
