--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -67,11 +67,11 @@
 
 ### 递归和循环
 
-递归-概览
-斐波拉契数列⭐⭐
-跳台阶⭐⭐
-变态跳台阶⭐⭐
-矩形覆盖⭐⭐
+- [递归-概览](../dataStructure/复杂度分析.md##迭代&递归)
+- [斐波拉契数列⭐⭐](./递归和循环/斐波拉契数列.md)
+- [跳台阶⭐⭐](./递归和循环/跳台阶.md)
+- [变态跳台阶⭐⭐](./递归和循环/变态跳台.md)
+- [矩形覆盖⭐⭐](./递归和循环/矩形覆盖.md)
 
 ### 回溯算法
 
