--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -75,14 +75,16 @@
 
 ### 回溯算法
 
-回溯-概览
-二叉树中和为某一值的路径⭐⭐⭐
-字符串的排列⭐⭐⭐
-和为sum的n个数⭐⭐⭐
-矩阵中的路径⭐⭐⭐
-机器人的运动范围⭐⭐⭐
-N皇后问题⭐⭐⭐
-N皇后问题2⭐⭐⭐
+- [回溯-概览](./回溯/回溯.md)
+- [二叉树中和为某一值的路径⭐⭐⭐](../dataStructure/二叉树/路径之和II.md)
+[路径和I](../dataStructure/二叉树/leetcode+字节-二叉树中和为某一值的路径.md)
+
+- [字符串的排列⭐⭐⭐](../dataStructure/字符串/字符串排列.md)
+- [和为sum的n个数⭐⭐⭐](./回溯/和为sum的n个数.md)
+- [矩阵中的路径⭐⭐⭐](./回溯/矩阵中的路径.md)
+- [机器人的运动范围⭐⭐⭐](./回溯/机器人的运动范围.md)
+- [N皇后问题⭐⭐⭐]
+- [N皇后问题2⭐⭐⭐]
 
 - 相关题目
 百度&leetcode46：全排列问题
