feat: 回溯 update

--- a/algorithm/回溯/机器人的运动范围.md
+++ b/algorithm/回溯/机器人的运动范围.md
@@ -1,3 +1,79 @@
 地上有一个m行和n列的方格。一个机器人从坐标0,0的格子开始移动，每一次只能向左，右，上，下四个方向移动一格，但是不能进入行坐标和列坐标的数位之和大于k的格子。
 
 例如，当k为18时，机器人能够进入方格（35,37），因为3+5+3+7 = 18。但是，它不能进入方格（35,38），因为3+5+3+8 = 19。请问该机器人能够达到多少个格子？
+
+```js
+//  方法1: 逐个遍历 比较 阈值
+function robotMove(m, n, k) {
+  let result = 0
+
+  function countSum(x, y) {
+    let count = 0
+
+    while(x) {
+      count += x % 10
+      x = Math.floor(x / 10)
+    }
+
+    while(y) {
+      count += y % 10
+      y = Math.floor(y / 10)
+    }
+
+    return count
+  }
+
+    // 初始化 matrix 数组
+  for (let i = 0; i < m; i++) {
+    for (let j = 0; j < n; j++) {
+      const tmp = countSum(i, j)
+      if (tmp <= k) {
+        result ++
+      }
+    }
+  }
+
+  return result
+
+}
+
+//  方法二
+function moveCount(m, n, k) {
+  // 计算一个数的各个位上数字之和
+  function getSum(num) {
+    let sum = 0
+    while(num>0) {
+      sum += num % 10
+      num = Math.floor(num / 10)
+    }
+
+    return result
+  }
+
+  function dfs(i, j) {
+    if (i<0 || i>= m || j<0 || j>=n || visited[i][j]) {
+      return 0
+    }
+
+    const sum = getSum(i) + getSum(j)
+    if (sum > k) return 0
+
+    visited[i][j] = true
+
+    return (
+      1 + dfs(i + 1, j) + dfs(i - 1, j) + dfs(i, j + 1) + dfs(i, j - 1)
+    )
+  }
+
+  // 创建一个二维数组用于标记格子是否已访问过
+  const visited = new Array(m)
+  for (let i = 0; i < m; i++) {
+    visited[i] = new Array(n).fill(false)
+  }
+
+  return dfs(0, 0)
+
+
+}
+
+```
