--- a/algorithm/回溯/矩阵中的路径.md
+++ b/algorithm/回溯/矩阵中的路径.md
@@ -2,7 +2,15 @@
 
 路径可以从矩阵中的任意一个格子开始，每一步可以在矩阵中向左，向右，向上，向下移动一个格子。 如果一条路径经过了矩阵中的某一个格子，则之后不能再次进入这个格子。
 
-review
+例如a b c e s f c s a d e e这样的3 X 4矩阵中包含一条字符串"bcced"的路径，但是矩阵中不包含"abcb"路径，因为字符串的第一个字符b占据了矩阵中的第一行第二个格子之后，路径不能再次进入该格子。
+
+```js
+     a b c e 
+     s f c s 
+     a d e e
+```
+
+- review
 ```js
 function exist(board, word) {
   const m = board.length; // 矩阵的行数
@@ -15,6 +23,10 @@ function exist(board, word) {
   }
 
   // 深度优先搜索
+  /**
+   * i, j 坐标
+   * index - word 的下标
+   */
   function dfs(i, j, index) {
     // 如果当前字符不匹配，或者当前位置已经访问过，返回 false
     if (!isValid(i, j) || board[i][j] !== word[index] || visited[i][j]) {
