--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -87,8 +87,8 @@
 - [N皇后问题2⭐⭐⭐]
 
 - 相关题目
-百度&leetcode46：全排列问题
-腾讯&leetcode22：括号生成
+- [百度+leetcode46-全排列问题](./回溯/百度+leetcode46-全排列问题.md)
+腾讯+leetcode22-括号生成
 
 ### 动态规划
 
