--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -83,12 +83,12 @@
 - [和为sum的n个数⭐⭐⭐](./回溯/和为sum的n个数.md)
 - [矩阵中的路径⭐⭐⭐](./回溯/矩阵中的路径.md)
 - [机器人的运动范围⭐⭐⭐](./回溯/机器人的运动范围.md)
-- [N皇后问题⭐⭐⭐]
-- [N皇后问题2⭐⭐⭐]
+- [N皇后问题⭐⭐⭐](./回溯/N皇后问题.md)
+- [N皇后问题2⭐⭐⭐](./回溯/N皇后问题2.md)
 
 - 相关题目
 - [百度+leetcode46-全排列问题](./回溯/百度+leetcode46-全排列问题.md)
-腾讯+leetcode22-括号生成
+- [腾讯+leetcode22-括号生成](./回溯/腾讯+leetcode22-括号生成.md)
 
 ### 动态规划
 
