--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -89,11 +89,13 @@
 - 相关题目
 - [百度+leetcode46-全排列问题](./回溯/百度+leetcode46-全排列问题.md)
 - [腾讯+leetcode22-括号生成](./回溯/腾讯+leetcode22-括号生成.md)
+- [划分为k个相等的子集](./回溯/划分为k个相等的子集.md)
+- [力扣第37题「解数独」](./回溯/解数独.md)
 
 ### 动态规划
 
 动态规划-概览
-斐波拉契数列⭐⭐
+- [斐波拉契数列⭐⭐](./递归和循环/斐波拉契数列.md)
 最小路径和⭐⭐⭐
 打家劫舍⭐⭐⭐
 
