feat: BFS update

--- a/dataStructure/二叉树/二叉树的最小深度.md
+++ b/dataStructure/二叉树/二叉树的最小深度.md
@@ -47,23 +47,23 @@ function minDepth(root) {
 }
 
 
-//  迭代实现
+//  迭代实现 BFS
 function minDepth(root) {
   if (!root) return 0
   //  用一个队列来存储每一层的节点
   let queue = [root]
   //  记录深度
   let depth = 0
-  //  还存在节点
+  //  循环遍历每一层
   while(queue.length > 0) {
     depth++
         //  记录当前层的节点个数
     let levelSize = queue.length
-    //  遍历当前层的每个节点
+    //  遍历 当前层 的每个节点
     for (let i=0; i<levelSize; i++) {
             //  弹出每个节点
       let node = queue.shift()
-      //  如果没有左右子树，说明已经到头了！！！
+      //  如果没有左右子树，说明已经到头了！！！ 最小的深度, 会优先走到这步
       if (!node.left && !node.right) return depth;
       
       //  如果当前节点有左子节点，将左子节点入队
