feat: adjust link style

--- a/algorithm/回溯/回溯.md
+++ b/algorithm/回溯/回溯.md
@@ -78,7 +78,7 @@ https://labuladong.online/algo/di-san-zha-24031/bao-li-sou-96f79/hui-su-sua-56e1
 当然，也可以说有第四种形式，即元素可重可复选。但既然元素可复选，那又何必存在重复元素呢？元素去重之后就等同于形式三，所以这种情况不用考虑。
 
 ## 子集（元素无重不可复选）
-### 力扣第 78 题 - 子集 - https://leetcode.cn/problems/subsets/description/
+[力扣第 78 题 - 子集](https://leetcode.cn/problems/subsets/description/)
 
 ![Alt text](image-1.png)
 ```js
@@ -90,7 +90,7 @@ https://labuladong.online/algo/di-san-zha-24031/bao-li-sou-96f79/hui-su-sua-56e1
 
 ```
 ## 组合（元素无重不可复选）
-### 力扣第 77 题「组合」- https://leetcode.cn/problems/combinations/description/
+[力扣第 77 题「组合」](https://leetcode.cn/problems/combinations/description/)
 
 对上一题做稍微的调整即可；
 
@@ -180,8 +180,7 @@ function permute(nums, k) {
 ```
 
 ## 子集/组合（元素可重不可复选）
-力扣第 90 题「子集 II」
-https://leetcode.cn/problems/subsets-ii/
+[力扣第 90 题「子集 II」](https://leetcode.cn/problems/subsets-ii/)
 
 需要先进行排序，让相同的元素靠在一起，如果发现 nums[i] == nums[i-1]，则跳过：
 
@@ -214,8 +213,7 @@ var subsetsWithDup = function(nums) {
 };
 ```
 
-我们说了组合问题和子集问题是等价的，所以我们直接看一道组合的题目吧，这是力扣第 40 题「组合总和 II」
-https://leetcode.cn/problems/combination-sum-ii/description/
+我们说了组合问题和子集问题是等价的，所以我们直接看一道组合的题目吧，这是[力扣第 40 题「组合总和 II」](https://leetcode.cn/problems/combination-sum-ii/description/)
 
 ```js
 var combinationSum2 = function(candidates, target) {
@@ -294,8 +292,7 @@ function permuteUnique(nums) {
 ## 子集/组合（元素无重可复选）
 终于到了最后一种类型了：输入数组无重复元素，但每个元素可以被无限次使用。
 
-直接看力扣第 39 题「组合总和」：
-https://leetcode.cn/problems/combination-sum/
+直接看[力扣第 39 题「组合总和」](https://leetcode.cn/problems/combination-sum/)
 
 标准的子集/组合问题是如何保证不重复使用元素的？
 
