--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -94,7 +94,7 @@
 
 ### 动态规划
 
-动态规划-概览
+- [动态规划-概览](./动态规划/概览.md)
 - [斐波拉契数列⭐⭐](./递归和循环/斐波拉契数列.md)
 最小路径和⭐⭐⭐
 打家劫舍⭐⭐⭐
@@ -117,3 +117,17 @@
 字节&leetcode122：买卖股票的最佳时机 II
 字节&leetcode455：分发饼干
 腾讯&leetcode659：分割数组为连续子序列
+
+
+## 其他心得
+
+算法的本质就是「穷举」
+
+顺便强调下，「算法工程师」做的这个「算法」，和「数据结构与算法」中的这个「算法」完全是两码事，免得一些初学同学误解。
+
+对前者来说，重点在数学建模和调参经验，计算机真就只是拿来做计算的工具而已；而后者的重点是计算机思维，需要你能够站在计算机的视角，抽象、化简实际问题，然后用合理的数据结构去解决问题。
+
+不妨称算法工程师研究的算法为「数学算法」，称刷题面试的算法为「计算机算法」，我写的内容主要聚焦的是「计算机算法」。
+
+穷举有两个关键难点：无遗漏、无冗余。
+
