--- a/algorithm/递归和循环/斐波拉契数列.md
+++ b/algorithm/递归和循环/斐波拉契数列.md
@@ -23,6 +23,8 @@ function fibonacci(n) {
   return fibonacci(n - 1) + fibonacci(n - 2)
 }
 
+时间复杂度：O(2^n)
+空间复杂度：O(n)
 
 //  递归加记忆化!!!!!!!!
 //  使用一个数组缓存计算过的值。
@@ -62,5 +64,6 @@ function Fibonacci(n){
     }
     return result;
 }
-
+时间复杂度：O(n)
+空间复杂度：O(n)
 ```
