--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -96,8 +96,24 @@
 
 - [动态规划-概览](./动态规划/概览.md)
 - [斐波拉契数列⭐⭐](./递归和循环/斐波拉契数列.md)
-最小路径和⭐⭐⭐
-打家劫舍⭐⭐⭐
+
+#### 路径问题
+阿里&网易&leetcode64：最小路径和
+不同路径(opens new window)
+不同路径 II(opens new window)
+形成字符串的最短路径
+
+#### 买卖股票类问题
+买卖股票的最佳时机(opens new window)
+买卖股票的最佳时机 III(opens new window)
+打家劫舍(opens new window)
+打家劫舍 II
+
+#### 子序列问题
+不同的子序列(opens new window)
+乘积最大子序列(opens new window)
+最长上升子序列(opens new window)
+最长回文子序列
 
 - 相关题目
 字节&leetcode70：爬楼梯问题
