--- a/algorithm/递归和循环/斐波拉契数列.md
+++ b/algorithm/递归和循环/斐波拉契数列.md
@@ -4,9 +4,12 @@
 
 ## 思路
 
+但凡遇到需要递归的问题，最好都画出递归树！！！！！！！，这对你分析算法的复杂度，寻找算法低效的原因都有巨大帮助。
+![Alt text](image.png)
+
 递归的本质是吧一个问题分解成两个或者多个小问题，如果多个小问题存在互相重叠的情况，那么就存在重复计算。
 
-f(n) = f(n-1) + f(n-2)这种拆分使用递归是典型的存在重叠的情况，所以会造成非常多的重复计算。
+f(n) = f(n-1) + f(n-2)这种拆分使用递归是典型的存在重叠的情况，所以会造成非常多的重复计算。 例如f(18)会被计算2次；
 
 另外，每一次函数调用爱内存中都需要分配空间，每个进程的栈的容量是有限的，递归层次过多，就会造成栈溢出。
 
@@ -23,10 +26,10 @@ function fibonacci(n) {
   return fibonacci(n - 1) + fibonacci(n - 2)
 }
 
-时间复杂度：O(2^n)
+时间复杂度：O(2^n) - 即递归树中节点的总数。显然二叉树节点总数为指数级别
 空间复杂度：O(n)
 
-//  递归加记忆化!!!!!!!!
+//  递归加记忆化!!!!!!!! 带备忘录的递归解法！！！！！
 //  使用一个数组缓存计算过的值。
 function fibonacci(n, memory = []) {
   if (n < 2) return n
@@ -39,7 +42,8 @@ function fibonacci(n, memory = []) {
   return memory[n]
 }
 //  tip: 调用 fibonacci(5) 时，函数会先计算 fibonacci(4) 和 fibonacci(3) 的值，然后将它们相加得到5。在计算过程中，memory 数组会被用来存储已经计算过的值，避免了重复计算。
-
+时间复杂度是 O(n)
+空间复杂度：O(n)
 
 
 //  动态规划解法!!!!!!!!
@@ -65,5 +69,5 @@ function Fibonacci(n){
     return result;
 }
 时间复杂度：O(n)
-空间复杂度：O(n)
+空间复杂度：O(1)
 ```
