--- a/algorithm/动态规划/动态规划.md
+++ b/algorithm/动态规划/动态规划.md
@@ -232,3 +232,68 @@ var coinChange = function(coins, amount) {
 ```
 
 ![Alt text](image-2.png)
+
+
+
+## 动态规划的通用技巧：数学归纳思想。
+
+[力扣第 300 题「最长递增子序列」](https://leetcode.cn/problems/longest-increasing-subsequence/description/)
+
+注意「子序列」和「子串」这两个名词的区别，子串一定是连续的，而子序列不一定是连续的。下面先来设计动态规划算法解决这个问题。
+
+我们设计动态规划算法，不是需要一个 dp 数组吗？我们可以假设 dp[0...i-1] 都已经被算出来了，然后问自己：怎么通过这些结果算出 dp[i]？
+
+我们的定义是这样的：dp[i] 表示以 nums[i] 这个数结尾的最长递增子序列的长度。
+
+根据这个定义，我们就可以推出 base case：dp[i] 初始值为 1，因为以 nums[i] 结尾的最长递增子序列起码要包含它自己。
+
+![Alt text](gif1.gif)
+
+根据这个定义，我们的最终结果（子序列的最大长度）应该是 dp 数组中的最大值。
+
+我们应该怎么设计算法逻辑来正确计算每个 dp[i] 呢？
+
+！！！！！这就是动态规划的重头戏，如何设计算法逻辑进行状态转移，才能正确运行呢？这里需要使用数学归纳的思想：
+
+假设我们已经知道了 dp[0..4] 的所有结果，我们如何通过这些已知结果推出 dp[5] 呢？
+
+> nums[5] = 3，既然是递增子序列，我们只要找到前面那些结尾比 3 小的子序列，然后把 3 接到这些子序列末尾，就可以形成一个新的递增子序列，而且这个新的子序列长度加一。
+
+```js
+for (int i = 0; i < nums.length; i++) {
+    for (int j = 0; j < i; j++) {
+        // 寻找 nums[0..j-1] 中比 nums[i] 小的元素
+        if (nums[i] > nums[j]) {
+            // 把 nums[i] 接在后面，即可形成长度为 dp[j] + 1，
+            // 且以 nums[i] 为结尾的递增子序列
+            dp[i] = Math.max(dp[i], dp[j] + 1);
+        }
+    }
+}
+
+```
+
+
+完整代码
+```js
+var lengthOfLIS = function(nums) {
+  // 定义: dp[i] 表示以 nums[i] 这个数结尾的最长递增子序列的长度
+  // base case: dp 数组全都初始化为 1
+  let dp = Array(nums.length).fill(1)
+
+  for (let i=0; i<nums.length; i++) {
+    for (let j=0; j<i; j++) {
+      if (nums[i] > nums[j]) {
+        dp[i] = Math.max(dp[i], dp[j]+1)
+      }
+    }
+  }
+
+  let res = 0
+  res = Math.max.apply(null, dp)
+  
+  return res
+}
+
+O(n^2)
+```
