--- a/algorithm/动态规划/动态规划.md
+++ b/algorithm/动态规划/动态规划.md
@@ -297,3 +297,15 @@ var lengthOfLIS = function(nums) {
 
 O(n^2)
 ```
+
+### 总结
+如何找到动态规划的状态转移关系：
+
+1、明确 dp 数组的定义。这一步对于任何动态规划问题都很重要，如果不得当或者不够清晰，会阻碍之后的步骤。
+
+2、根据 dp 数组的定义，运用数学归纳法的思想，假设 dp[0...i-1] 都已知，想办法求出 dp[i]，一旦这一步完成，整个题目基本就解决了。
+
+但如果无法完成这一步，很可能就是 dp 数组的定义不够恰当，需要重新定义 dp 数组的含义；或者可能是 dp 数组存储的信息还不够，不足以推出下一步的答案，需要把 dp 数组扩大成二维数组甚至三维数组。
+
+目前的解法是标准的动态规划，但对最长递增子序列问题来说，这个解法不是最优的，可能无法通过所有测试用例了，下面讲讲更高效的解法。
+
