feat: 下降路径最小和

--- a/algorithm/动态规划/动态规划.md
+++ b/algorithm/动态规划/动态规划.md
@@ -1,5 +1,5 @@
 特点: 
-1. 重叠字问题
+1. 重叠子问题
 2. 状态转移方程【最关键】
 3. 最优子结构
 
@@ -34,13 +34,23 @@ for 状态1 in 状态1的所有取值：
 
 ---------
 
-动态规划问题的一般形式就是求最值; 比如说让你求最长递增子序列呀，最小编辑距离呀等等
+动态规划问题的一般形式就是*求最值*; 比如说让你求最长递增子序列呀，最小编辑距离呀等等
 
 既然是要求最值，核心问题是什么呢？求解动态规划的核心问题是穷举。因为要求最值，肯定要把所有可行的答案穷举出来，然后在其中找最值呗。
 
 > 首先，虽然动态规划的核心思想就是穷举求最值，但是问题可以千变万化，穷举所有可行解其实并不是一件容易的事，需要你熟练掌握递归思维，只有列出正确的「状态转移方程」，才能正确地穷举。而且，你需要判断算法问题是否具备「最优子结构」，是否能够通过子问题的最值得到原问题的最值。另外，动态规划问题存在「重叠子问题」，如果暴力穷举的话效率会很低，所以需要你使用「备忘录」或者「DP table」来优化穷举过程，避免不必要的计算。
 
-以上提到的重叠子问题、最优子结构、状态转移方程就是动态规划三要素。
+以上提到的`重叠子问题、最优子结构、状态转移方程`就是动态规划三要素。
+
+```
+重叠子问题（Overlapping Subproblems）：指的是在解决一个大问题的过程中，会反复遇到相同的小问题。动态规划通过保存已经解决过的子问题的解，避免重复计算，从而提高效率。
+
+最优子结构（Optimal Substructure）：表示一个问题的最优解包含其子问题的最优解。换句话说，通过子问题的最优解可以推导出原问题的最优解。这种性质有助于将问题分解成子问题，并利用子问题的最优解来求解原问题。
+
+状态转移方程（State Transition Equation）：描述了问题的状态之间的关系和转移规律。通过状态转移方程，我们可以找到当前问题与子问题之间的联系，从而建立动态规划的递推关系，实现问题的逐步求解。
+
+简单来说，重叠子问题指的是重复计算相同的小问题，最优子结构表示问题的最优解包含子问题的最优解，状态转移方程描述了问题状态之间的关系，帮助我们建立动态规划的递推关系，从而高效地解决问题。
+```
 
 辅助你思考状态转移方程：
 *明确 base case -> 明确「状态」-> 明确「选择」 -> 定义 dp 数组/函数的含义。*
@@ -309,3 +319,64 @@ O(n^2)
 
 目前的解法是标准的动态规划，但对最长递增子序列问题来说，这个解法不是最优的，可能无法通过所有测试用例了，下面讲讲更高效的解法。
 
+
+
+如何看出重叠子问题
+
+首先，最简单粗暴的方式就是画图，把递归树画出来，看看有没有重复的节点。有的话 需要用备忘录技巧去优化
+
+dp 数组的遍历方向
+
+1、遍历的过程中，所需的状态必须是已经计算出来的。
+
+2、遍历结束后，存储结果的那个位置必须已经被计算出来。
+
+
+## 下降路径最小和
+[题目](https://leetcode.cn/problems/minimum-falling-path-sum/)
+```js
+// 这个 dp 函数的含义如下：
+// 从第一行（matrix[0][..]）向下落，落到位置 matrix[i][j] 的最小路径和为 dp(matrix, i, j)。
+var minFallingPathSum = function(matrix) {
+  let n = matrix.length
+  let res = Infinity
+
+  let memo = Array.from({length: n}, () => Array(n).fill(66666))
+
+  const min = (a, b, c) => {
+    return Math.min(a, Math.min(b, c))
+  }
+
+  const dp = (matrix, i, j, memo) => {
+    //  合法性
+    if(i<0 || i>=n || j<0 || j>=n) {
+      return 99999
+    }
+
+    // base case 
+    if (i === 0) {
+      return matrix[0][j]
+    }
+
+    //  备忘录
+    if (memo[i][j] !== 66666) {
+      return memo[i][j]
+    }
+
+    //  状态转移 = 当前值 + 从左上，正上，右上 过来的值
+    memo[i][j] = matrix[i][j] + min(
+      dp(matrix, i-1, j-1, memo), 
+      dp(matrix, i-1, j, memo),
+      dp(matrix, i-1, j+1, memo)
+    )
+
+    return memo[i][j]
+  }
+
+  for (let j=0; j<n; j++) {
+    res = Math.min(res, dp(matrix, n-1, j, memo))
+  }
+
+  return res
+};
+```
