feat: 最小路径和

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -98,7 +98,7 @@
 - [斐波拉契数列⭐⭐](./递归和循环/斐波拉契数列.md)
 
   #### 路径问题
-  阿里&网易&leetcode64：最小路径和
+  -[阿里&网易&leetcode64-最小路径和](./动态规划/最小路径和.md)
   不同路径(opens new window)
   不同路径 II(opens new window)
   形成字符串的最短路径
