--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -98,10 +98,9 @@
 - [斐波拉契数列⭐⭐](./递归和循环/斐波拉契数列.md)
 
   #### 路径问题
-  -[阿里&网易&leetcode64-最小路径和](./动态规划/最小路径和.md)
-  不同路径(opens new window)
-  不同路径 II(opens new window)
-  形成字符串的最短路径
+  - [阿里&网易&leetcode64-最小路径和](./动态规划/最小路径和.md)
+  - [不同路径](./动态规划/不同路径.md)
+  - [不同路径II](./动态规划/不同路径II.md)  形成字符串的最短路径
 
   #### 买卖股票类问题
   买卖股票的最佳时机(opens new window)
