--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -100,13 +100,15 @@
   #### 路径问题
   - [阿里&网易&leetcode64-最小路径和](./动态规划/最小路径和.md)
   - [不同路径](./动态规划/不同路径.md)
-  - [不同路径II](./动态规划/不同路径II.md)  形成字符串的最短路径
+  - [不同路径II](./动态规划/不同路径II.md)
 
   #### 买卖股票类问题
-  买卖股票的最佳时机(opens new window)
-  买卖股票的最佳时机 III(opens new window)
-  打家劫舍(opens new window)
-  打家劫舍 II
+  - [力扣第 300 题「最长递增子序列」](https://leetcode.cn/problems/longest-increasing-subsequence/description/)
+  
+  - [买卖股票的最佳时机](./动态规划/买卖股票的最佳时机.md)
+  - [买卖股票的最佳时机III](./动态规划/买卖股票的最佳时机III.md)
+  - [打家劫舍](./动态规划/打家劫舍.md)
+  - [打家劫舍II](./动态规划/打家劫舍II.md)
 
   #### 子序列问题
   不同的子序列(opens new window)
