feat: 子序列问题start

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -104,14 +104,14 @@
 
   #### 买卖股票类问题
   - [力扣第 300 题「最长递增子序列」](https://leetcode.cn/problems/longest-increasing-subsequence/description/)
-  
+
   - [买卖股票的最佳时机](./动态规划/买卖股票的最佳时机.md)
   - [买卖股票的最佳时机III](./动态规划/买卖股票的最佳时机III.md)
   - [打家劫舍](./动态规划/打家劫舍.md)
   - [打家劫舍II](./动态规划/打家劫舍II.md)
 
   #### 子序列问题
-  不同的子序列(opens new window)
+  - [不同的子序列](./动态规划/不同的子序列.md)
   乘积最大子序列(opens new window)
   最长上升子序列(opens new window)
   最长回文子序列
