fix: style modify

--- a/algorithm/动态规划/动态规划.md
+++ b/algorithm/动态规划/动态规划.md
@@ -3,6 +3,7 @@
 2. 状态转移方程【最关键】
 3. 最优子结构
 
+```
 题型: 求最值
 核心: 穷举
 
@@ -12,21 +13,22 @@
 3 明确 dp函数/数组 定义
 4 明确 base case
 
+```
 
 ```js
-# 自顶向下递归的动态规划
+// 自顶向下递归的动态规划
 def dp(状态1, 状态2, ...):
     for 选择 in 所有可能的选择:
-        # 此时的状态已经因为做了选择而改变
+        // 此时的状态已经因为做了选择而改变
         result = 求最值(result, dp(状态1, 状态2, ...))
     return result
 
-# 自底向上迭代的动态规划
-# 初始化 base case
+// 自底向上迭代的动态规划
+// 初始化 base case
 dp[0][0][...] = base case
-# 进行状态转移
-for 状态1 in 状态1的所有取值：
-    for 状态2 in 状态2的所有取值：
+// 进行状态转移
+for 状态1 in 状态1的所有取值: 
+    for 状态2 in 状态2的所有取值: 
         for ...
             dp[状态1][状态2][...] = 求最值(选择1，选择2...)
 
@@ -43,21 +45,21 @@ for 状态1 in 状态1的所有取值：
 以上提到的`重叠子问题、最优子结构、状态转移方程`就是动态规划三要素。
 
 ```
-重叠子问题（Overlapping Subproblems）：指的是在解决一个大问题的过程中，会反复遇到相同的小问题。动态规划通过保存已经解决过的子问题的解，避免重复计算，从而提高效率。
+重叠子问题（Overlapping Subproblems）: 指的是在解决一个大问题的过程中，会反复遇到相同的小问题。动态规划通过保存已经解决过的子问题的解，避免重复计算，从而提高效率。
 
-最优子结构（Optimal Substructure）：表示一个问题的最优解包含其子问题的最优解。换句话说，通过子问题的最优解可以推导出原问题的最优解。这种性质有助于将问题分解成子问题，并利用子问题的最优解来求解原问题。
+最优子结构（Optimal Substructure）: 表示一个问题的最优解包含其子问题的最优解。换句话说，通过子问题的最优解可以推导出原问题的最优解。这种性质有助于将问题分解成子问题，并利用子问题的最优解来求解原问题。
 
-状态转移方程（State Transition Equation）：描述了问题的状态之间的关系和转移规律。通过状态转移方程，我们可以找到当前问题与子问题之间的联系，从而建立动态规划的递推关系，实现问题的逐步求解。
+状态转移方程（State Transition Equation）: 描述了问题的状态之间的关系和转移规律。通过状态转移方程，我们可以找到当前问题与子问题之间的联系，从而建立动态规划的递推关系，实现问题的逐步求解。
 
 简单来说，重叠子问题指的是重复计算相同的小问题，最优子结构表示问题的最优解包含子问题的最优解，状态转移方程描述了问题状态之间的关系，帮助我们建立动态规划的递推关系，从而高效地解决问题。
 ```
 
-辅助你思考状态转移方程：
+辅助你思考状态转移方程: 
 *明确 base case -> 明确「状态」-> 明确「选择」 -> 定义 dp 数组/函数的含义。*
 
 先看[斐波那契的例子](../递归和循环/斐波拉契数列.md)
 
-问题： 存在大量重复计算，比如 f(18) 被计算了两次 -》 动态规划问题的第一个性质：重叠子问题
+问题:  存在大量重复计算，比如 f(18) 被计算了两次 -》 动态规划问题的第一个性质: 重叠子问题
 
 所以有了 带备忘录的递归解法！！！！！
 > 造一个「备忘录」，每次算出某个子问题的答案后别急着返回，先记到「备忘录」里再返回；每次遇到一个子问题先去「备忘录」里查一查，如果发现之前已经解决过这个问题了，直接把答案拿出来用，不要再耗时去计算了。
@@ -95,7 +97,7 @@ function fibonacci(n) {
 }
 ```
 
-引出「状态转移方程」这个名词，实际上就是描述问题结构的数学形式：
+引出「状态转移方程」这个名词，实际上就是描述问题结构的数学形式: 
 ![Alt text](image.png)
 
 `f(n) `的函数参数会不断变化，所以你把参数 `n `想做一个状态，这个状态 `n `是由状态 `n - 1 `和状态 `n - 2 `转移（相加）而来，这就叫状态转移，仅此而已。
@@ -141,7 +143,7 @@ function fibonacci(n) {
 //  coinChange([1,2,5], 11) === 1 + min(coinChange([1,2,5], 10), coinChange([1,2,5], 9), coinChange([1,2,5], 6))
 //  分解成子问题
 
-// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
+// 注意: javascript 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
 // 本代码不保证正确性，仅供参考。如有疑惑，可以参照我写的 java 代码对比查看。
 
 var coinChange = function(coins, amount) {
@@ -149,7 +151,7 @@ var coinChange = function(coins, amount) {
     return dp(coins, amount);
 }
 
-// 定义：要凑出金额 n，至少要 dp(coins, n) 个硬币
+// 定义: 要凑出金额 n，至少要 dp(coins, n) 个硬币
 function dp(coins, amount) {
     // base case
     if (amount == 0) return 0;
@@ -245,17 +247,17 @@ var coinChange = function(coins, amount) {
 
 
 
-## 动态规划的通用技巧：数学归纳思想。
+## 动态规划的通用技巧: 数学归纳思想。
 
 [力扣第 300 题「最长递增子序列」](https://leetcode.cn/problems/longest-increasing-subsequence/description/)
 
 注意「子序列」和「子串」这两个名词的区别，子串一定是连续的，而子序列不一定是连续的。下面先来设计动态规划算法解决这个问题。
 
-我们设计动态规划算法，不是需要一个 dp 数组吗？我们可以假设 dp[0...i-1] 都已经被算出来了，然后问自己：怎么通过这些结果算出 dp[i]？
+我们设计动态规划算法，不是需要一个 dp 数组吗？我们可以假设 dp[0...i-1] 都已经被算出来了，然后问自己: 怎么通过这些结果算出 dp[i]？
 
-我们的定义是这样的：dp[i] 表示以 nums[i] 这个数结尾的最长递增子序列的长度。
+我们的定义是这样的: dp[i] 表示以 nums[i] 这个数结尾的最长递增子序列的长度。
 
-根据这个定义，我们就可以推出 base case：dp[i] 初始值为 1，因为以 nums[i] 结尾的最长递增子序列起码要包含它自己。
+根据这个定义，我们就可以推出 base case: dp[i] 初始值为 1，因为以 nums[i] 结尾的最长递增子序列起码要包含它自己。
 
 ![Alt text](gif1.gif)
 
@@ -263,7 +265,7 @@ var coinChange = function(coins, amount) {
 
 我们应该怎么设计算法逻辑来正确计算每个 dp[i] 呢？
 
-！！！！！这就是动态规划的重头戏，如何设计算法逻辑进行状态转移，才能正确运行呢？这里需要使用数学归纳的思想：
+！！！！！这就是动态规划的重头戏，如何设计算法逻辑进行状态转移，才能正确运行呢？这里需要使用数学归纳的思想: 
 
 假设我们已经知道了 dp[0..4] 的所有结果，我们如何通过这些已知结果推出 dp[5] 呢？
 
@@ -309,7 +311,7 @@ O(n^2)
 ```
 
 ### 总结
-如何找到动态规划的状态转移关系：
+如何找到动态规划的状态转移关系: 
 
 1、明确 dp 数组的定义。这一步对于任何动态规划问题都很重要，如果不得当或者不够清晰，会阻碍之后的步骤。
 
@@ -335,7 +337,7 @@ dp 数组的遍历方向
 ## 下降路径最小和
 [题目](https://leetcode.cn/problems/minimum-falling-path-sum/)
 ```js
-// 这个 dp 函数的含义如下：
+// 这个 dp 函数的含义如下: 
 // 从第一行（matrix[0][..]）向下落，落到位置 matrix[i][j] 的最小路径和为 dp(matrix, i, j)。
 var minFallingPathSum = function(matrix) {
   let n = matrix.length
