feat: 不同子序列

--- a/algorithm/动态规划/不同的子序列.md
+++ b/algorithm/动态规划/不同的子序列.md
@@ -1,3 +1,61 @@
 [题目](https://leetcode.cn/problems/distinct-subsequences/)
 
-[ref - labuladong](https://labuladong.online/algo/di-er-zhan-a01c6/zi-xu-lie--6bc09/jing-dian--e5f5e/)
+[ref - labuladong](https://blog.csdn.net/fdl123456/article/details/124938272)
+
+## 解题思路
+```
+### 第一种视角，站在 t 的视角：
+
+我们的原问题是求 s[0..] 中不同子序列 t[0..]，可以先看 t[0] 在 s 中的什么位置，假设 s[2], s[6] 是字符 t[0]，那么原问题转化成了在 s[2..] 和 s[6..] 中寻找不同子序列 t[1..]。
+
+这个解法当然超时; 带备忘录的动态规划算法的时间复杂度 = 子问题的个数 x 函数本身的时间复杂度 = O(MN) * O(M)，M, N 分别代表 s, t 的长度。
+
+### 下面尝试用第二种视角进行穷举，即站在 s 的视角：
+
+我们的原问题是求 s[0..] 中不同子序列 t[0..]，可以先看看 s[0] 是否能匹配 t[0]，如果不可以，那没得说，原问题就转化为让 s[1..] 去匹配 t[0..]；
+
+但如果 s[0] 可以匹配 t[0]，那么又有两种情况，这两种情况是累加的关系：
+
+1、让 s[0] 匹配 t[0]，那么原问题转化为让 s[1..] 去匹配 t[1..]。
+
+2、不让 s[0] 匹配 t[0]，那么原问题转化为让 s[1..] 去匹配 t[0..]。
+
+比如 s = "aab", t = "ab"，就有两种匹配方式：a_b 和 _ab。
+总的时间复杂度就是 O(MN)。
+```
+
+```js
+var numDistinct = function(s, t) {
+  const memo = Array.from({length: s.length}, () => Array(t.length).fill(-1))
+
+  return dp(s, 0, t, 0, memo)
+}
+// 定义：该函数返回 s[i..] 中的子序列 t[j..] 的数量
+function dp(s, i, t, j, memo) {
+  const m = s.length, n = t.length
+
+  if (j === n) {
+    return 1
+  }
+
+  if (n-j > m-i) {
+    return 0
+  }
+
+  if (memo[i][j] !== -1) {
+    return memo[i][j]
+  }
+
+  let res = 0
+
+  //  状态转移方程
+  if (s.charAt(i) === t.charAt(j)) {
+    res += dp(s, i+1, t, j+1, memo) + dp(s, i+1, t, j, memo)
+  } else {
+    res += dp(s, i+1, t, j, memo)
+  }
+
+  memo[i][j] = res
+  return memo
+}
+```
