feat: 乘积最大子序列

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -112,9 +112,9 @@
 
   #### 子序列问题
   - [不同的子序列](./动态规划/不同的子序列.md)
-  乘积最大子序列(opens new window)
-  最长上升子序列(opens new window)
-  最长回文子序列
+  - [乘积最大子序列](./动态规划/乘积最大子序列.md)
+  - [最长上升子序列](./动态规划/最长上升子序列.md)
+  - [最长回文子序列](./动态规划/最长回文子序列.md)
 
 - 相关题目
   字节&leetcode70：爬楼梯问题
