feat: 最长回文子序列

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -115,6 +115,7 @@
   - [乘积最大子序列](./动态规划/乘积最大子序列.md)
   - [最长上升子序列](./动态规划/最长上升子序列.md)
   - [最长回文子序列](./动态规划/最长回文子序列.md)
+  - [编辑距离](./动态规划/编辑距离.md)
 
 - 相关题目
   字节&leetcode70：爬楼梯问题
