fix: math.max / min 等价替换

--- a/algorithm/动态规划/乘积最大子序列.md
+++ b/algorithm/动态规划/乘积最大子序列.md
@@ -14,9 +14,11 @@
 ```js
 let min = (a, b, c) => {
   return Math.min(a, Math.min(b, c))
+  //  等价于 Math.min(a, b, c)
 }
 let max = (a, b, c) => {
   return Math.max(a, Math.max(b, c))
+  //  等价于 Math.max(a, b, c)
 }
 var maxProduct = function(nums) {
     let n = nums.length;
@@ -34,6 +36,7 @@ var maxProduct = function(nums) {
     }
 
     return Math.max.apply(null, dp2)
+    //  Math.max.apply(...dp2)
 
 
 }
