--- a/algorithm/动态规划/动态规划.md
+++ b/algorithm/动态规划/动态规划.md
@@ -300,6 +300,7 @@ var lengthOfLIS = function(nums) {
 
   let res = 0
   res = Math.max.apply(null, dp)
+  //  Math.max.apply(...dp)
   
   return res
 }
@@ -344,6 +345,7 @@ var minFallingPathSum = function(matrix) {
 
   const min = (a, b, c) => {
     return Math.min(a, Math.min(b, c))
+    //  等价于 Math.min(a, b, c)
   }
 
   const dp = (matrix, i, j, memo) => {
