--- a/algorithm/动态规划/最长上升子序列.md
+++ b/algorithm/动态规划/最长上升子序列.md
@@ -53,7 +53,7 @@ var lengthOfLIS = function(nums) {
 
   let res = 0
   res = Math.max.apply(null, dp)
-  
+  //  Math.max.apply(...dp)
   return res
 }
 
