--- a/algorithm/动态规划/编辑距离.md
+++ b/algorithm/动态规划/编辑距离.md
@@ -17,3 +17,83 @@ else:
 
 ```
 
+base case 是 i 走完 s1 或 j 走完 s2，可以直接返回另一个字符串剩下的长度。
+
+
+
+
+```js
+//  暴力解法
+var minDistance = function(s1, s2) {
+  const m = s1.length, n = s2.length  
+
+  return dp(s1, m-1, s2, n-1)
+}
+// 定义：返回 s1[0..i] 和 s2[0..j] 的最小编辑距离
+const dp = (s1, i, s2, j) => {
+  //  base case
+  if (i === -1) return j+1
+  if (j === -1) return i+1
+
+  if (s1[i] === s2[j]) {
+    //  啥都不做，j i 平移
+    return  dp(s1, i-1, s2, j-1)
+  }
+    //  不相等的情况
+    return Math.min(
+      dp(s1, i, s2, j-1) + 1,  //  insert
+      dp(s1, i-1, s2, j) + 1,  //  delete
+      dp(s1, i-1, s2, j-1) + 1 //  replace
+    )
+
+
+}
+
+//  存在重叠子问题，需要用动态规划技巧来优化。
+对于子问题 dp(i-1, j-1)，如何通过原问题 dp(i, j) 得到呢？有不止一条路径，比如 dp(i, j) -> #1 和 dp(i, j) -> #2 -> #3。一旦发现一条重复路径，就说明存在巨量重复路径，也就是重叠子问题。
+
+int dp(i, j) {
+    dp(i - 1, j - 1); // #1
+    dp(i, j - 1);     // #2
+    dp(i - 1, j);     // #3
+}
+
+对于重叠子问题呢，前文 动态规划详解 详细介绍过，优化方法无非是备忘录或者 DP table。
+
+
+
+
+//  动态规划解法
+var minDistance = function(s1, s2) {
+  const m = s1.length, n = s2.length  
+  let memo = Array.from({length: m+1}, () => Array(n+1).fill(-1))
+
+  return dp(s1, m-1, s2, n-1, memo)
+}
+// 定义：返回 s1[0..i] 和 s2[0..j] 的最小编辑距离
+const dp = (s1, i, s2, j, memo) => {
+  //  base case
+  if (i === -1) return j+1
+  if (j === -1) return i+1
+
+  //  解决重叠子问题
+  if (memo[i][j] !== -1) {
+    return memo[i][j]
+  }
+
+  if (s1[i] === s2[j]) {
+    //  啥都不做，j i 平移
+    memo[i][j] = dp(s1, i-1, s2, j-1, memo)
+  } else {
+    //  不相等的情况
+    memo[i][j] = Math.min(
+      dp(s1, i, s2, j-1, memo) + 1,  //  insert
+      dp(s1, i-1, s2, j, memo) + 1,  //  delete
+      dp(s1, i-1, s2, j-1, memo) + 1 //  replace
+    )
+  }
+
+  return memo[i][j]
+
+}
+```
