--- a/algorithm/动态规划/最长公共子序列.md
+++ b/algorithm/动态规划/最长公共子序列.md
@@ -1,2 +1,34 @@
 [公共子序列1143](https://leetcode.cn/problems/longest-common-subsequence/description/)
 
+```js
+//  与编辑距离类似
+var longestCommonSubsequence = function(text1, text2) {
+    const m = text1.length, n = text2.length
+    const memo = Array.from({length: m+1}, ()=> Array(n+1).fill(-1))
+
+    const dp = (s1, i, s2, j, memo) => {
+      if (i === -1 || j === -1) {
+        return 0
+      }
+
+      if (memo[i][j] != -1) {
+        return memo[i][j]
+      }
+
+      if (s1[i] === s2[j]) {
+        memo[i][j] = dp(s1, i-1, s2, j-1, memo) + 1
+      } else {
+        memo[i][j] = Math.max(
+          dp(s1, i-1, s2, j, memo),
+          dp(s1, i-1, s2, j-1, memo),
+          dp(s1, i, s2, j-1, memo)
+        )
+      }
+
+      return memo[i][j]
+    }
+
+    return dp(text1, m-1, text2, n-1, memo) 
+
+};
+```
