--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -118,14 +118,14 @@
   - [编辑距离](./动态规划/编辑距离.md)
   - [最长公共子序列](./动态规划/最长公共子序列.md)
 
-- 相关题目
-  字节&leetcode70：爬楼梯问题
-  字节&leetcode746：使用最小花费爬楼梯
-  字节二面&leetcode53：最大子序和
-  腾讯&leetcode121：买卖股票的最佳时机
-  腾讯&leetcode647：回文子串
-  腾讯&leetcode5：最长回文子串
-  阿里&网易&leetcode64：最小路径和
+ 相关题目
+  - [字节+leetcode70-爬楼梯问题](./动态规划/字节+leetcode70-爬楼梯问题.md)
+  - [字节+leetcode746-使用最小花费爬楼梯](字节+leetcode746-使用最小花费爬楼梯)
+  - [字节二面+leetcode53-最大子序和](字节二面+leetcode53-最大子序和)
+  - [腾讯+leetcode121-买卖股票的最佳时机](腾讯+leetcode121-买卖股票的最佳时机)
+  - [腾讯+leetcode647-回文子串](腾讯+leetcode647-回文子串)
+  - [腾讯+leetcode5-最长回文子串](腾讯+leetcode5-最长回文子串)
+  - [阿里+网易+leetcode64-最小路径和](阿里+网易+leetcode64-最小路径和)
 
 ### 贪心算法
 
