feat: 最小花费爬楼梯

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -106,7 +106,7 @@
   - [力扣第 300 题「最长递增子序列」](https://leetcode.cn/problems/longest-increasing-subsequence/description/)
 
   - [买卖股票的最佳时机](./动态规划/买卖股票的最佳时机.md)
-  - [买卖股票的最佳时机III](./动态规划/买卖股票的最佳时机III.md)
+  - [腾讯+leetcode121买卖股票的最佳时机III](./动态规划/买卖股票的最佳时机III.md)
   - [打家劫舍](./动态规划/打家劫舍.md)
   - [打家劫舍II](./动态规划/打家劫舍II.md)
 
@@ -120,12 +120,11 @@
 
  相关题目
   - [字节+leetcode70-爬楼梯问题](./动态规划/字节+leetcode70-爬楼梯问题.md)
-  - [字节+leetcode746-使用最小花费爬楼梯](字节+leetcode746-使用最小花费爬楼梯)
-  - [字节二面+leetcode53-最大子序和](字节二面+leetcode53-最大子序和)
-  - [腾讯+leetcode121-买卖股票的最佳时机](腾讯+leetcode121-买卖股票的最佳时机)
-  - [腾讯+leetcode647-回文子串](腾讯+leetcode647-回文子串)
-  - [腾讯+leetcode5-最长回文子串](腾讯+leetcode5-最长回文子串)
-  - [阿里+网易+leetcode64-最小路径和](阿里+网易+leetcode64-最小路径和)
+  - [字节+leetcode746-使用最小花费爬楼梯](字节+leetcode746-使用最小花费爬楼梯.md)
+  - [字节二面+leetcode53-最大子序和](字节二面+leetcode53-最大子序和.md)
+  - [腾讯+leetcode647-回文子串](腾讯+leetcode647-回文子串.md)
+  - [腾讯+leetcode5-最长回文子串](腾讯+leetcode5-最长回文子串.md)
+  - [阿里+网易+leetcode64-最小路径和](阿里+网易+leetcode64-最小路径和.md)
 
 ### 贪心算法
 
