--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -120,16 +120,20 @@
 
  相关题目
   - [字节+leetcode70-爬楼梯问题](./动态规划/字节+leetcode70-爬楼梯问题.md)
-  - [字节+leetcode746-使用最小花费爬楼梯](字节+leetcode746-使用最小花费爬楼梯.md)
-  - [字节二面+leetcode53-最大子序和](字节二面+leetcode53-最大子序和.md)
-  - [腾讯+leetcode647-回文子串](腾讯+leetcode647-回文子串.md)
-  - [腾讯+leetcode5-最长回文子串](腾讯+leetcode5-最长回文子串.md)
+  - [字节+leetcode746-使用最小花费爬楼梯](./动态规划/字节+leetcode746-使用最小花费爬楼梯.md)
+  - [字节二面+leetcode53-最大子序和](./动态规划/字节二面+leetcode53-最大子序和.md)
+  - [腾讯+leetcode647-回文子串](./动态规划/腾讯+leetcode647-回文子串.md)
+  - [腾讯+leetcode5-最长回文子串](./动态规划/腾讯+leetcode5-最长回文子串.md)
 
 
 ### 贪心算法
 
-贪心算法-概览
-分发饼干⭐⭐
+ - [贪心算法-概览](./贪心算法/概览.md)
+
+买卖股票的最佳时机含手续费
+
+零钱兑换(opens new window)
+零钱兑换 II
 
 - 相关题目
 字节&leetcode122：买卖股票的最佳时机 II
