feat: add 深拷贝新选择

--- a/js/浅拷贝-深拷贝.md
+++ b/js/浅拷贝-深拷贝.md
@@ -11,6 +11,20 @@ arr.concat()
 arr.forEach(...)
 Object.assign(arr1, arr)  //  也可用于对象
 const a2 = [...a1]  //  等同于 arr.slice()
+
+const calendarEvent = {
+  title: "Builder.io Conf",
+  date: new Date(123),
+  attendees: ["Steve"]
+}
+
+const shallowCopy = {...calendarEvent}
+
+// 同样在原对象里添加了
+shallowCopy.attendees.push("Bob")
+
+// 同样在原对象里添加了
+shallowCopy.date.setTime(456)
 ```
 
 常见的深拷贝方式有:
@@ -18,9 +32,15 @@ const a2 = [...a1]  //  等同于 arr.slice()
 - _.cloneDeep(): lodash 库方法
 ```js
 const obj2 = _.cloneDeep(obj1);
+
+缺点： 需要单独引入 lodash 包, 增加打包体积；虽然可以单独引入该包的某个方法
+import cloneDeep from 'lodash/cloneDeep'
+好于
+import { cloneDeep } from 'lodash'
 ```
 
 - jQuery.extend()
+将一个或多个对象的内容合并到目标对象中
 ```js
 const $ = require('jquery');
 const obj1 = {
@@ -28,14 +48,37 @@ const obj1 = {
     b: { f: { g: 1 } },
     c: [1, 2, 3]
 };
-const obj2 = $.extend(true, {}, obj1);
+const obj2 = $.extend(true, {}, obj1);  //  参数true 表示是否深拷贝
 console.log(obj1.b.f === obj2.b.f); // false
 ```
 
 - JSON.stringify()
 ```js
 const obj2=JSON.parse(JSON.stringify(obj1));
-//  但是这种方式存在弊端,会忽略undefined symbol和函数
+//  但是这种方式存在弊端,会忽略undefined symbol map regex和函数
+
+例子
+const kitchenSink = {
+  set: new Set([1, 3, 3]),
+  map: new Map([[1, 2]]),
+  regex: /foo/,
+  deep: { array: [ new File(someBlobData, 'file.txt') ] },
+  error: new Error('Hello!')
+}
+
+const veryProblematicCopy = JSON.parse(JSON.stringify(kitchenSink))
+
+// {
+//   "set": {},
+//   "map": {},
+//   "regex": {},
+//   "deep": {
+//     "array": [
+//       {}
+//     ]
+//   },
+//   "error": {},
+// }
 ```
 
 如何实现一个对象或者数组的浅拷贝
@@ -137,3 +180,46 @@ function deepCopy(obj, map = new WeakMap()) {
 ```
 补充知识点见: [字典集合](../dataStructure/字典和集合.md)
 
+`for ... in`是为遍历`对象属性`而构建的，`不建议与数组一起使用`，数组可以用`Array.prototype.forEach()`和`for ... of`，那么for ... in的到底有什么用呢？
+
+它最常用的地方应该是用于调试，可以更方便的去`检查对象属性`（通过输出到控制台或其他方式）。尽管对于处理存储数据，数组更实用些，但是你在处理有`key-value`数据（比如属性用作“键”），需要检查其中的任何键是否为某值的情况时，还是推荐用`for ... in`。
+
+
+
+### 补充
+ 2024/3/1
+
+全局的 `structuredClone()` 方法使用结构化克隆算法将给定的值进行深拷贝。
+
+```js
+structuredClone(value)
+
+value
+被克隆的对象。可以是任何结构化克隆支持的类型。
+
+const calendarEvent = {
+  title: "Builder.io Conf",
+  date: new Date(123),
+  attendees: ["Steve"]
+}
+
+// 😍
+const copied = structuredClone(calendarEvent)
+
+克隆无限嵌套 的 对象 和 数组
+克隆循环引用
+可以克隆以下类型, such as Date, Set, Map, Error, RegExp, ArrayBuffer, Blob, File, ImageData, and many more
+
+局限性： Function & Dom nodes & 对象原型
+
+class MyClass { 
+  foo = 'bar' 
+  myMethod() { /* ... */ }
+}
+const myClass = new MyClass()
+
+const cloned = structuredClone(myClass)
+// Becomes: { foo: 'bar' }
+
+cloned instanceof myClass // false
+```
