--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -128,17 +128,13 @@
 
 ### 贪心算法
 
- - [贪心算法-概览](./贪心算法/概览.md)
-
- - [加油站](./贪心算法/加油站.md)
-
-买卖股票的最佳时机含手续费
-
-零钱兑换(opens new window)
-零钱兑换 II
+- [贪心算法-概览](./贪心算法/概览.md)
+- [加油站](./贪心算法/加油站.md)
+- [零钱兑换](./动态规划/零钱兑换.md)
+- [零钱兑换II](./贪心算法/零钱兑换II.md)
 
 - 相关题目
-字节&leetcode122：买卖股票的最佳时机 II
+- [字节&leetcode122：买卖股票的最佳时机II](./动态规划/买卖股票的最佳时机.md)
 字节&leetcode455：分发饼干
 腾讯&leetcode659：分割数组为连续子序列
 
