--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -97,6 +97,10 @@
 - [动态规划-概览](./动态规划/动态规划.md)
 - [斐波拉契数列⭐⭐](./递归和循环/斐波拉契数列.md)
 
+  #### 背包问题
+  - [01背包](./动态规划/01背包.md)
+  - [分割等和子集](./动态规划/分割等和子集.md)
+  
   #### 路径问题
   - [阿里&网易&leetcode64-最小路径和](./动态规划/最小路径和.md)
   - [不同路径](./动态规划/不同路径.md)
