--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -100,7 +100,7 @@
   #### 背包问题
   - [01背包](./动态规划/01背包.md)
   - [分割等和子集](./动态规划/分割等和子集.md)
-  
+
   #### 路径问题
   - [阿里&网易&leetcode64-最小路径和](./动态规划/最小路径和.md)
   - [不同路径](./动态规划/不同路径.md)
@@ -139,8 +139,8 @@
 
 - 相关题目
 - [字节&leetcode122：买卖股票的最佳时机II](./动态规划/买卖股票的最佳时机.md)
-字节&leetcode455：分发饼干
-腾讯&leetcode659：分割数组为连续子序列
+- [字节&leetcode455-分发饼干](./贪心算法/字节&leetcode455-分发饼干.md)
+- [腾讯&leetcode659-分割数组为连续子序列](./贪心算法/腾讯&leetcode659-分割数组为连续子序列.md)
 
 
 ## 其他心得
