feat: 算法暂告一段落

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -31,6 +31,8 @@
 - [1+2+3+...+n⭐⭐⭐](./数学运算/1+2+3+...+n.md)
 - [丑数⭐⭐⭐](./数学运算/丑数.md)
 
+- [一行代码解决的算法题](./数学运算/一行代码解决的算法题.md)
+
 - 特殊规律
 ```
 1. 无符号右移>>>
