--- a/js/数组去重-扁平-最值.md
+++ b/js/数组去重-扁平-最值.md
@@ -102,15 +102,17 @@ function flatten(arr, deep = 1) {
 }
 ```
 
-object 方法
+object 方法 !!!
 ```js
 const object1 = {
   a: 'somestring',
   b: 42,
   c: false,
 };
-console.log(Object.keys(object1));  //  获取属性
+console.log(Object.keys(object1));  //  获取属性  
+//  ['a', 'b', 'c']
 console.log(Object.values(object1));  //  获取值
+//  ['somestring', 42, false]
 
 //  Object.fromEntries() 静态方法将键值对列表转换为一个对象。
 const map = new Map([
@@ -129,7 +131,6 @@ const obj = Object.fromEntries(arr);
 console.log(obj); // { 0: "a", 1: "b", 2: "c" }
 
 //  返回自有属性的键值对
-
 for (const [key, value] of Object.entries(object1)) {
   console.log(`${key}: ${value}`);
 }
@@ -138,6 +139,38 @@ for (const [key, value] of Object.entries(object1)) {
 // "a: somestring"
 // "b: 42"
 
+Object.entries(object1)
+// [
+//   ['0', 'a'],
+//   ['1', 'b']
+// ]
+
+// 将一个或者多个源对象中所有可枚举的自有属性复制到目标对象，并返回修改后的目标对象。
+[
+  如果指定的对象自身有指定的属性，则静态方法 Object.hasOwn() 返回 true。如果属性是继承的或者不存在，该方法返回 false。
+]
+Object.assign(target, ...sources)
+
+const target = { a: 1, b: 2 };
+const source = { b: 4, c: 5 };
+
+const returnedTarget = Object.assign(target, source);
+
+console.log(target);
+// Expected output: Object { a: 1, b: 4, c: 5 }
+
+console.log(returnedTarget === target);
+// Expected output: true
+
+
+Object.getPrototypeOf() 静态方法返回指定对象的原型
+Object.create() 静态方法以一个现有对象作为原型，创建一个新对象。
+
+const prototype1 = {};
+const object1 = Object.create(prototype1);
+
+console.log(Object.getPrototypeOf(object1) === prototype1);
+// Expected output: true
 ```
 
 ### 最值
