--- a/js/手写防抖-节流.md
+++ b/js/手写防抖-节流.md
@@ -57,9 +57,16 @@ let test = (...params) => {
 ```
 
 ### 闭包
-> 闭包是指那些能够访问自由变量的函数;
+闭包是指一个函数可以访问其词法作用域之外的变量。当一个函数在另一个函数内部被定义时，它就形成了一个闭包。闭包可以捕获外部函数的变量，并且可以在其定义的作用域之外被调用和访问这些变量。闭包可以用来保存状态、封装数据、实现私有变量等功能。
 
-> 自由变量是指在函数中使用的，但既不是函数参数也不是函数的局部变量的变量。
+闭包有以下几个关键点：
+
+1 函数内部定义函数： 闭包通常涉及在一个函数内部定义另一个函数。
+2 内部函数访问外部函数的变量： 内部函数可以访问外部函数的变量，即使外部函数已经执行完毕。
+3 外部函数返回内部函数： 外部函数通常会返回内部函数，使得内部函数可以在外部函数的作用域之外被调用。
+
+闭包的缺点：
+内存泄漏： 如果不正确使用闭包，可能会导致内存泄漏，因为闭包会阻止垃圾回收机制回收不再使用的变量。
 
 ```
 实践上的闭包：
@@ -115,7 +122,7 @@ data[2];  //  2
 
 
 ### 防抖
-> 防抖（debounce）: 你尽管触发事件，但是我一定在事件触发 n 秒后才执行，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就以新的事件的时间为准，n 秒后才执行，总之，就是要等你触发完事件 n 秒内不再触发事件，我才执行，真是任性呐!
+> 防抖（debounce）: 你尽管触发事件，但是我一定在事件触发 n 秒后才执行，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就以新的事件的时间为准，n 秒后才执行，总之，就是要等你触发完事件 n 秒内不再触发事件，我才执行
 
 场景：
 - 搜索框，输入后1000ms发送搜索推荐请求
@@ -131,6 +138,27 @@ function debounce(func, wait) {
     timeout = setTimeout(func, wait)
   }
 }
+//  this 没有正确指向的例子！！！
+function debounce(func, wait) {
+  let timeout;
+  return function() { // 内部函数
+    clearTimeout(timeout);
+    timeout = setTimeout(func, wait); // 直接调用 func
+  };
+}
+
+const myObj = {
+  name: 'My Object',
+  sayHi: function() {
+    console.log('Hi from', this.name);
+  }
+};
+
+const debouncedSayHi = debounce(myObj.sayHi, 1000);
+
+myObj.sayHi(); // 输出: "Hi from My Object" 
+debouncedSayHi(); // 输出: "Hi from undefined" 
+//  setTimeout 在执行 func 时，this 默认指向了全局对象 (window) 或 undefined (严格模式下)，而不是 myObj，导致输出 "Hi from undefined"。
 
 //  第二版 将this 指向正确的对象
 function debounce(func, wait) {
@@ -146,7 +174,7 @@ function debounce(func, wait) {
   }
 }
 
-//  第三版 收集event对象
+//  第三版 收集传参
 function debounce(func, wait) {
   var timeout = null;
 
@@ -154,7 +182,8 @@ function debounce(func, wait) {
     var context = this
 
     clearTimeout(timeout)
-    timeout = setTimeout(function (){
+    //  以下代码直接执行了，timeout 记录了id
+    timeout = setTimeout(() =>{
       func.apply(context, args) //  apply 传入数组参数
     }, wait)
   }
@@ -214,6 +243,7 @@ function throttle(func, wait) {
 
   return function(...args) {
     if (!timeout) {
+      //  以下代码直接执行了，timeout 记录了id
       timeout = setTimeout(() => {
         //  执行的时候吧timeout cancel
         timeout = null
